--- a/services/journal/Dockerfile
+++ b/services/journal/Dockerfile
@@ -18,7 +18,10 @@ COPY . /app
 
 RUN pip install -U pip && pip install pipenv
 
-RUN pipenv install --system --skip-lock
+# Add retry mechanism for pipenv install to handle network issues
+RUN pipenv install --system --skip-lock || \
+    (echo "First attempt failed, retrying..." && sleep 5 && pipenv install --system --skip-lock) || \
+    (echo "Second attempt failed, retrying with longer timeout..." && sleep 10 && pipenv install --system --skip-lock)
 
 EXPOSE 8000
 
